# django_hex_arch

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
services/db/: docker-compose.yml
src/: manage.py
src/apps/users/: models.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/deployment/: gunicorn.conf.py  wsgi.py
src/settings/: base.py
src/urls/: base.py
