[tool.poetry]
name = "django_hex_arch"
version = "0.1.0"
description = ""
authors = ["Jesús Fragoso <rust.in.peace.2010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
bpython = "^0.21"
pre-commit = "^2.13.0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
